Season 11 Changes - Login user name  maximum length from 9 to 10 digits (PPC Code)

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,87 +13,94 @@
         android:orientation="vertical">
 
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:layout_marginTop="@dimen/dimen_20dp"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_centerInParent="true">
 
-
-            <ImageView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/login_icon"
                 android:gravity="center"
-                android:text="@string/aadharNo"
-                android:textColor="@color/white" />
-
-            <com.cgg.pps.custom.CustomFontEditText
-                android:id="@+id/username"
-                android:layout_width="@dimen/dimen_250dp"
-                android:layout_height="@dimen/dimen_50dp"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/btn_background"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="@string/username"
-                android:imeOptions="actionNext"
-                android:inputType="textCapCharacters"
-                android:maxLength="10"
-                android:padding="3dp"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
-
-            <com.cgg.pps.custom.CustomFontEditText
-                android:id="@+id/password"
-                android:layout_width="@dimen/dimen_250dp"
-                android:layout_height="@dimen/dimen_50dp"
-                android:layout_marginTop="@dimen/dimen_10dp"
-                android:background="@drawable/btn_background"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="@string/pasword"
-                android:imeOptions="actionDone"
-                android:inputType="textPassword"
-                android:padding="3dp"
-                android:paddingStart="5dp"
-                android:paddingLeft="5dp"
-                android:scrollHorizontally="true"
-                android:singleLine="true"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white" />
+                android:orientation="vertical">
 
 
-            <com.cgg.pps.custom.CustomFontButtonView
-                android:id="@+id/loginBtn"
-                android:layout_width="@dimen/dimen_150dp"
-                android:layout_height="@dimen/dimen_50dp"
-                android:layout_marginTop="@dimen/dimen_20dp"
-                android:background="@drawable/btn_background1"
-                android:gravity="center"
-                android:text="@string/submit"
-                android:textAllCaps="false"
-                android:textColor="@color/white" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:background="@drawable/login_icon"
+                    android:gravity="center"
+                    android:text="@string/aadharNo"
+                    android:textColor="@color/white" />
 
-        </LinearLayout>
+                <com.cgg.pps.custom.CustomFontEditText
+                    android:id="@+id/username"
+                    android:layout_width="@dimen/dimen_250dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:background="@drawable/btn_background"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="@string/username"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapCharacters"
+                    android:maxLength="10"
+                    android:padding="3dp"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+
+                <com.cgg.pps.custom.CustomFontEditText
+                    android:id="@+id/password"
+                    android:layout_width="@dimen/dimen_250dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginTop="@dimen/dimen_10dp"
+                    android:background="@drawable/btn_background"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="@string/pasword"
+                    android:imeOptions="actionDone"
+                    android:inputType="textPassword"
+                    android:padding="3dp"
+                    android:paddingStart="5dp"
+                    android:paddingLeft="5dp"
+                    android:scrollHorizontally="true"
+                    android:singleLine="true"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/white" />
+
+
+                <com.cgg.pps.custom.CustomFontButtonView
+                    android:layout_marginBottom="@dimen/dimen_20dp"
+                    android:id="@+id/loginBtn"
+                    android:layout_width="@dimen/dimen_150dp"
+                    android:layout_height="@dimen/dimen_50dp"
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:background="@drawable/btn_background1"
+                    android:gravity="center"
+                    android:text="@string/submit"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white" />
+
+            </LinearLayout>
+
+        </ScrollView>
 
 
         <com.cgg.pps.custom.CustomFontTextView
-            android:padding="@dimen/dimen_4dp"
-            android:layout_marginRight="@dimen/dimen_4dp"
             android:id="@+id/envTV"
-            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/foo"
+            android:layout_marginRight="@dimen/dimen_4dp"
             android:gravity="right"
-            android:textColor="#FFF" />
+            android:padding="@dimen/dimen_4dp"
+            android:textColor="#FFF"
+            android:textSize="20sp" />
 
         <LinearLayout
             android:id="@+id/foo"
@@ -132,7 +139,6 @@
                 android:layout_marginStart="@dimen/dimen_20dp"
                 android:layout_marginLeft="@dimen/dimen_20dp"
                 android:layout_marginTop="2dp"
-                android:visibility="invisible"
                 android:background="@drawable/btn_background1"
                 android:drawableEnd="@drawable/right"
                 android:drawableRight="@drawable/right"
@@ -141,7 +147,8 @@
                 android:text="@string/drp"
                 android:textAllCaps="false"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:visibility="invisible" />
 
         </LinearLayout>
 
