--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -16,18 +16,18 @@
             android:gravity="center"
             android:orientation="vertical" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
+        <ScrollView
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:focusableInTouchMode="true"
             android:orientation="vertical">
 
             <LinearLayout
+                android:padding="@dimen/dimen_10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/dimen_20dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -96,12 +96,11 @@
                     android:textColorHint="@color/white" />
 
                 <LinearLayout
-                    android:padding="12dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="12dp">
 
                     <com.cgg.pps.custom.CustomFontButtonView
-                        android:visibility="gone"
                         android:id="@+id/cancel"
                         android:layout_width="@dimen/dimen_150dp"
                         android:layout_height="@dimen/dimen_50dp"
@@ -109,7 +108,8 @@
                         android:gravity="center"
                         android:text="@string/cancel"
                         android:textAllCaps="false"
-                        android:textColor="@color/white" />
+                        android:textColor="@color/white"
+                        android:visibility="gone" />
 
 
                     <com.cgg.pps.custom.CustomFontButtonView
@@ -128,6 +128,6 @@
             </LinearLayout>
 
 
-        </LinearLayout>
+        </ScrollView>
     </RelativeLayout>
 </layout>
