--- a/app/src/main/res/layout/custom_alert_pdf.xml
+++ b/app/src/main/res/layout/custom_alert_pdf.xml
@@ -6,13 +6,16 @@
     android:layout_marginStart="10dp"
     android:orientation="vertical">
 
+    <ScrollView
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <RelativeLayout
         android:id="@+id/dialog_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="150dp"
         android:background="@drawable/dialog_round">
 
         <TextView
@@ -87,7 +90,7 @@
 
         </LinearLayout>
     </RelativeLayout>
-
+    </ScrollView>
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
