--- a/app/src/main/res/layout/custom_alert_error.xml
+++ b/app/src/main/res/layout/custom_alert_error.xml
@@ -6,59 +6,67 @@
     android:layout_marginStart="10dp"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/dialog_body"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ScrollView
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginTop="150dp"
-        android:background="@drawable/dialog_round">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="40dp"
-            android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/dialog_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/dialog_title"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="@string/app_name" />
-
-        <Button
-            android:id="@+id/btDialogYes"
-            style="@style/roundedDialog_red"
+        <RelativeLayout
+            android:id="@+id/dialog_body"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/dialog_message"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:paddingEnd="10dp"
-            android:paddingLeft="10dp"
-            android:text="@string/Ok"
-            android:paddingRight="10dp"
-            android:paddingStart="10dp"
-            android:textColor="@color/white"
-            android:visibility="visible" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/dialog_round">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/dialog_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="40dp"
+                android:text="@string/app_name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/dialog_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/dialog_title"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/app_name" />
+
+            <Button
+                android:id="@+id/btDialogYes"
+                style="@style/roundedDialog_red"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_below="@+id/dialog_message"
+                android:layout_marginBottom="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:text="@string/Ok"
+                android:paddingRight="10dp"
+                android:paddingStart="10dp"
+                android:textColor="@color/white"
+                android:visibility="visible" />
+
+        </RelativeLayout>
+
+
+    </ScrollView>
+
 
     <RelativeLayout
         android:layout_width="wrap_content"
