--- a/app/src/main/res/layout/paady_confirm_alert.xml
+++ b/app/src/main/res/layout/paady_confirm_alert.xml
@@ -16,7 +16,7 @@
         <TextView
             android:id="@+id/alert_titleTv"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="10dp"
             android:layout_weight="1"
